--- a/web/style.css
+++ b/web/style.css
@@ -55,11 +55,15 @@ img {
     background-color: white;
     padding: 20px;
     margin: 20px 0px 0px 200px;
-    line-height: 1.2;
+    line-height: 1;
     border-style: solid;
     border-width: .5px 2px 2px 2px;
     border-color: lightgray;
     box-shadow: 0px 1px 1px 0px lightgray;
+}
+
+.title h1 {
+    color: black;
 }
 
 .section {
@@ -71,4 +75,20 @@ img {
     border-width: .5px 2px 2px 2px;
     border-color: lightgray;
     box-shadow: 0px 1px 1px 0px lightgray;
+}
+
+h2 {
+    color: black;
+}
+
+.section ul {
+    margin-left: 20px;
+}
+
+li.indent {
+    margin-left: 20px;
+}
+
+#exp p {
+    font-style: italic;
 }
