--- a/web/style.css
+++ b/web/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
 }
 
 body {
-    background-color: #101214;
-    color: #7A7C80;
+    background-color: #202020;
+    color: #eee;
     display: block;
     margin: 8px;
 }
@@ -22,7 +22,7 @@ div {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: white;
+    background-color: #2a2d31;
     text-align: center;
     box-shadow: 0 35px 55px rgba(0,0,0,0.1);
 }
@@ -37,48 +37,49 @@ img {
     height: 200px;
     width: 200px;
     border-style: solid;
-    border-width: 5px;
-    border-color: #101214;
+    border-width: 2px;
+    border-color: #2a2d31;
     padding: 0%;
     margin-top: 10%;
 }
 
 .sidepanel a {
     cursor: pointer;
-    color: #101214;
+    color: #eee;
     padding: 16px;
     text-decoration: none;
     display: block;
 }
 
 .title {
-    background-color: white;
+    background-color: #202020;
     padding: 20px;
     margin: 20px 0px 0px 200px;
     line-height: 1;
     border-style: solid;
     border-width: .5px 2px 2px 2px;
-    border-color: lightgray;
-    box-shadow: 0px 1px 1px 0px lightgray;
+    box-shadow: 0px 1px 1px 0px #121212;
+    border-color: #202020; 
 }
 
 .title h1 {
-    color: black;
+    color: #eee;
+    font-size: 50px;
 }
 
 .section {
-    background-color: white;
+    background-color: #202020;
     padding: 20px;
     margin: 20px 0px 0px 200px;
     line-height: 1.2;
     border-style: solid;
     border-width: .5px 2px 2px 2px;
-    border-color: lightgray;
-    box-shadow: 0px 1px 1px 0px lightgray;
+    box-shadow: 0px 1px 1px 0px #121212;
+    border-color: #202020; 
 }
 
 h2 {
-    color: black;
+    color: #eee;
 }
 
 .section ul {
